update .gitignore to block files added by local

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Stuff added by local #
+########################
+.htaccess
+wp-content/wflogs/
+
 # Compiled source #
 ###################
 *.com
