--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# ignore node_modules #
+#######################
+/build/node_modules
+
 # Stuff added by local #
 ########################
 .htaccess
